--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ h6 {
   left: 0;
   width: 100%;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: linear-gradient(90deg, #4285f4, #34a853); }
 
 .brand-title {
   font-size: 1.5rem; }
